1999-10-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* NEWS: Updated.

	* THANKS: Updated.

	* rglclock.1: Update documentation.

	* README: Update documentation.

	* profile.cc (save, restore): Add const to each CHAR in
	reinterpret_cast.

1999-08-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/simple.c (draw_dial_disk): New function.
	(simple_draw_clock): Use draw_dial_disk and disable depth tests
	while drawing disks.
	(simple_init): #if-out depth test setting.

	* configure.in: Test deflate for -lz.

	* bin/main.cc (create_window): Add accel group.
	(class clock_app): Remove member accels.  Also change all users.

	* NEWS: Modified.

	* lib/clockoptions.cc (apply): Handle texture-mapping options.

	* include/glclock.h (class glclock): Add new member
	set_module_prop.

	* lib/Makefile.am (noinst_HEADERS): Added.

	* include/Makefile.am (noinst_HEADERS): Remove simple.h.

	* lib/simple.h: Moved from include.

	* lib/glclock.cc (handle_expose_event): Change the use of
	module::draw_clock.

	* lib/module.cc (prop, set_prop): New functions.
	(draw_clock): Remove argument.

	* include/module.h (class module): Add new members prop and
	set_prop.
	(class module): Change draw_clock's arguments.

	* include/glclock.h (class glclock): Add comments.

	* bin/main.cc (clock_app): Set default visual and colormap.
	(main): Add try-catch block to destroy toplevel.

	* lib/glclock.cc (best_visual): New function.

	* include/glclock.h (class glclock): Add new member best_visual.

1999-07-29  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/simple.c (modify_image_info): Renamed from modify_info.
	(read_texture_image): Renamed from read_texture and implemented.
	(load_texture_image): Renamed from load_texture.
	(set_texture): New function.
	(simple_draw_clock): Add texture-mapping support.
	(simple_set_prop): Set new flags.
	(simple_init): Remove unused code.

1999-07-27  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* include/simple.h: Add simple_set_prop decl.