@@ -1,3 +1,7 @@
+1999-10-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* ja.po: Updated.
+
 1999-08-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* ja.po: Updated.
